[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/ui/level-intro.tscn" type="PackedScene" id=1]
[ext_resource path="res://levels/scene-manager.tscn" type="PackedScene" id=2]
[ext_resource path="res://levels/level-2.gd" type="Script" id=3]
[ext_resource path="res://src/ui/dialogue-system.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/cyber-tileset.tres" type="TileSet" id=5]
[ext_resource path="res://src/powerups/powerup-spawn-point.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/enemy/spawn-point.tscn" type="PackedScene" id=10]
[ext_resource path="res://src/player/player.tscn" type="PackedScene" id=11]
[ext_resource path="res://src/targets/computer.tscn" type="PackedScene" id=12]

[node name="Level_2" type="Node2D"]
script = ExtResource( 3 )

[node name="Ground" type="TileMap" parent="."]
tile_set = ExtResource( 5 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( -196608, 18, 0, -196607, 18, 0, -196606, 18, 0, -196605, 18, 0, -196604, 18, 0, -196603, 18, 0, -196602, 18, 0, -196601, 18, 0, -196600, 18, 0, -196599, 18, 0, -196598, 18, 0, -196597, 18, 0, -196596, 18, 0, -196595, 18, 0, -196594, 18, 0, -196593, 18, 0, -196592, 18, 0, -196591, 18, 0, -196590, 18, 0, -196589, 18, 0, -196588, 18, 0, -196587, 18, 0, -196586, 18, 0, -196585, 18, 0, -196584, 18, 0, -196583, 18, 0, -196582, 18, 0, -196581, 18, 0, -196580, 18, 0, -196579, 18, 0, -196578, 18, 0, -196577, 18, 0, -196576, 18, 0, -196575, 18, 0, -196574, 18, 0, -196573, 18, 0, -131072, 18, 0, -131071, 18, 0, -131070, 18, 0, -131069, 18, 0, -131068, 18, 0, -131067, 18, 0, -131066, 18, 0, -131065, 18, 0, -131064, 18, 0, -131063, 18, 0, -131062, 18, 0, -131061, 18, 0, -131060, 18, 0, -131059, 18, 0, -131058, 18, 0, -131057, 18, 0, -131056, 18, 0, -131055, 18, 0, -131054, 18, 0, -131053, 18, 0, -131052, 18, 0, -131051, 18, 0, -131050, 18, 0, -131049, 18, 0, -131048, 18, 0, -131047, 18, 0, -131046, 18, 0, -131045, 18, 0, -131044, 18, 0, -131043, 18, 0, -131042, 18, 0, -131041, 18, 0, -131040, 18, 0, -131039, 18, 0, -131038, 18, 0, -131037, 18, 0, -65536, 18, 0, -65535, 18, 0, -65534, 18, 0, -65533, 18, 0, -65532, 18, 0, -65531, 18, 0, -65530, 18, 0, -65529, 18, 0, -65528, 18, 0, -65527, 18, 0, -65526, 18, 0, -65525, 18, 0, -65524, 18, 0, -65523, 18, 0, -65522, 18, 0, -65521, 18, 0, -65520, 18, 0, -65519, 18, 0, -65518, 18, 0, -65517, 18, 0, -65516, 18, 0, -65515, 18, 0, -65514, 18, 0, -65513, 18, 0, -65512, 18, 0, -65511, 18, 0, -65510, 18, 0, -65509, 18, 0, -65508, 18, 0, -65507, 18, 0, -65506, 18, 0, -65505, 18, 0, -65504, 18, 0, -65503, 18, 0, -65502, 18, 0, -65501, 18, 0, 0, 18, 0, 1, 18, 0, 2, 18, 0, 3, 18, 0, 4, 18, 0, 5, 18, 0, 6, 18, 0, 7, 18, 0, 8, 18, 0, 9, 18, 0, 10, 18, 0, 11, 18, 0, 12, 18, 0, 13, 18, 0, 14, 18, 0, 15, 18, 0, 16, 18, 0, 17, 18, 0, 18, 18, 0, 19, 18, 0, 20, 18, 0, 21, 18, 0, 22, 18, 0, 23, 18, 0, 24, 18, 0, 25, 18, 0, 26, 18, 0, 27, 18, 0, 28, 18, 0, 29, 18, 0, 30, 18, 0, 31, 18, 0, 32, 18, 0, 33, 18, 0, 34, 18, 0, 35, 18, 0, 65536, 18, 0, 65537, 18, 0, 65538, 18, 0, 65539, 18, 0, 65540, 18, 0, 65541, 18, 0, 65542, 18, 0, 65543, 18, 0, 65544, 18, 0, 65545, 18, 0, 65546, 18, 0, 65547, 18, 0, 65548, 18, 0, 65549, 18, 0, 65550, 18, 0, 65551, 18, 0, 65552, 18, 0, 65553, 18, 0, 65554, 18, 0, 65555, 18, 0, 65556, 18, 0, 65557, 18, 0, 65558, 18, 0, 65559, 18, 0, 65560, 18, 0, 65561, 18, 0, 65562, 18, 0, 65563, 18, 0, 65564, 18, 0, 65565, 18, 0, 65566, 18, 0, 65567, 18, 0, 65568, 18, 0, 65569, 18, 0, 65570, 18, 0, 65571, 18, 0, 131072, 18, 0, 131073, 18, 0, 131074, 18, 0, 131075, 18, 0, 131076, 18, 0, 131077, 18, 0, 131078, 18, 0, 131079, 18, 0, 131080, 18, 0, 131081, 18, 0, 131082, 18, 0, 131083, 18, 0, 131084, 18, 0, 131085, 18, 0, 131086, 18, 0, 131087, 18, 0, 131088, 18, 0, 131089, 18, 0, 131090, 18, 0, 131091, 18, 0, 131092, 18, 0, 131093, 18, 0, 131094, 18, 0, 131095, 18, 0, 131096, 18, 0, 131097, 18, 0, 131098, 18, 0, 131099, 18, 0, 131100, 18, 0, 131101, 18, 0, 131102, 18, 0, 131103, 18, 0, 131104, 18, 0, 131105, 18, 0, 131106, 18, 0, 131107, 18, 0, 196608, 18, 0, 196609, 18, 0, 196610, 18, 0, 196611, 18, 0, 196612, 18, 0, 196613, 18, 0, 196614, 18, 0, 196615, 18, 0, 196616, 18, 0, 196617, 18, 0, 196618, 18, 0, 196619, 18, 0, 196620, 18, 0, 196621, 18, 0, 196622, 18, 0, 196623, 18, 0, 196624, 18, 0, 196625, 18, 0, 196626, 18, 0, 196627, 18, 0, 196628, 18, 0, 196629, 18, 0, 196630, 18, 0, 196631, 18, 0, 196632, 18, 0, 196633, 18, 0, 196634, 18, 0, 196635, 18, 0, 196636, 18, 0, 196637, 18, 0, 196638, 18, 0, 196639, 18, 0, 196640, 18, 0, 196641, 18, 0, 196642, 18, 0, 196643, 18, 0, 262144, 18, 0, 262145, 18, 0, 262146, 18, 0, 262147, 18, 0, 262148, 18, 0, 262149, 18, 0, 262150, 18, 0, 262151, 18, 0, 262152, 18, 0, 262153, 18, 0, 262154, 18, 0, 262155, 18, 0, 262156, 18, 0, 262157, 18, 0, 262158, 18, 0, 262159, 18, 0, 262160, 18, 0, 262161, 18, 0, 262162, 18, 0, 262163, 18, 0, 262164, 18, 0, 262165, 18, 0, 262166, 18, 0, 262167, 18, 0, 262168, 18, 0, 262169, 18, 0, 262170, 18, 0, 262171, 18, 0, 262172, 18, 0, 262173, 18, 0, 262174, 18, 0, 262175, 18, 0, 262176, 18, 0, 262177, 18, 0, 262178, 18, 0, 262179, 18, 0, 327680, 18, 0, 327681, 18, 0, 327682, 18, 0, 327683, 18, 0, 327684, 18, 0, 327685, 18, 0, 327686, 18, 0, 327687, 18, 0, 327688, 18, 0, 327689, 18, 0, 327690, 18, 0, 327691, 18, 0, 327692, 18, 0, 327693, 18, 0, 327694, 18, 0, 327695, 18, 0, 327696, 18, 0, 327697, 18, 0, 327698, 18, 0, 327699, 18, 0, 327700, 18, 0, 327701, 18, 0, 327702, 18, 0, 327703, 18, 0, 327704, 18, 0, 327705, 18, 0, 327706, 18, 0, 327707, 18, 0, 327708, 18, 0, 327709, 18, 0, 327710, 18, 0, 327711, 18, 0, 327712, 18, 0, 327713, 18, 0, 327714, 18, 0, 327715, 18, 0, 393216, 18, 0, 393217, 18, 0, 393218, 18, 0, 393219, 18, 0, 393220, 18, 0, 393221, 18, 0, 393222, 18, 0, 393223, 18, 0, 393224, 18, 0, 393225, 18, 0, 393226, 18, 0, 393227, 18, 0, 393228, 18, 0, 393229, 18, 0, 393230, 18, 0, 393231, 18, 0, 393232, 18, 0, 393233, 18, 0, 393234, 18, 0, 393235, 18, 0, 393236, 18, 0, 393237, 18, 0, 393238, 18, 0, 393239, 18, 0, 393240, 18, 0, 393241, 18, 0, 393242, 18, 0, 393243, 18, 0, 393244, 18, 0, 393245, 18, 0, 393246, 18, 0, 393247, 18, 0, 393248, 18, 0, 393249, 18, 0, 393250, 18, 0, 393251, 18, 0, 458752, 18, 0, 458753, 18, 0, 458754, 18, 0, 458755, 18, 0, 458756, 18, 0, 458757, 18, 0, 458758, 18, 0, 458759, 18, 0, 458760, 18, 0, 458761, 18, 0, 458762, 18, 0, 458763, 18, 0, 458764, 18, 0, 458765, 18, 0, 458766, 18, 0, 458767, 18, 0, 458768, 18, 0, 458769, 18, 0, 458770, 18, 0, 458771, 18, 0, 458772, 18, 0, 458773, 18, 0, 458774, 18, 0, 458775, 18, 0, 458776, 18, 0, 458777, 18, 0, 458778, 18, 0, 458779, 18, 0, 458780, 18, 0, 458781, 18, 0, 458782, 18, 0, 458783, 18, 0, 458784, 18, 0, 458785, 18, 0, 458786, 18, 0, 458787, 18, 0, 524288, 18, 0, 524289, 18, 0, 524290, 18, 0, 524291, 18, 0, 524292, 18, 0, 524293, 18, 0, 524294, 18, 0, 524295, 18, 0, 524296, 18, 0, 524297, 18, 0, 524298, 18, 0, 524299, 18, 0, 524300, 18, 0, 524301, 18, 0, 524302, 18, 0, 524303, 18, 0, 524304, 18, 0, 524305, 18, 0, 524306, 18, 0, 524307, 18, 0, 524308, 18, 0, 524309, 18, 0, 524310, 18, 0, 524311, 18, 0, 524312, 18, 0, 524313, 18, 0, 524314, 18, 0, 524315, 18, 0, 524316, 18, 0, 524317, 18, 0, 524318, 18, 0, 524319, 18, 0, 524320, 18, 0, 524321, 18, 0, 524322, 18, 0, 524323, 18, 0, 589824, 18, 0, 589825, 18, 0, 589826, 18, 0, 589827, 18, 0, 589828, 18, 0, 589829, 18, 0, 589830, 18, 0, 589831, 18, 0, 589832, 18, 0, 589833, 18, 0, 589834, 18, 0, 589835, 18, 0, 589836, 18, 0, 589837, 18, 0, 589838, 18, 0, 589839, 18, 0, 589840, 18, 0, 589841, 18, 0, 589842, 18, 0, 589843, 18, 0, 589844, 18, 0, 589845, 18, 0, 589846, 18, 0, 589847, 18, 0, 589848, 18, 0, 589849, 18, 0, 589850, 18, 0, 589851, 18, 0, 589852, 18, 0, 589853, 18, 0, 589854, 18, 0, 589855, 18, 0, 589856, 18, 0, 589857, 18, 0, 589858, 18, 0, 589859, 18, 0, 655370, 18, 0, 655371, 18, 0, 655372, 18, 0, 655373, 18, 0, 655374, 18, 0, 655375, 18, 0, 655376, 18, 0, 655377, 18, 0, 655378, 18, 0, 655379, 18, 0, 655380, 18, 0, 655381, 18, 0, 655382, 18, 0, 655383, 18, 0, 655384, 18, 0, 655385, 18, 0, 655386, 18, 0, 655387, 18, 0, 655388, 18, 0, 655389, 18, 0, 655390, 18, 0, 655391, 18, 0, 655392, 18, 0, 655393, 18, 0, 655394, 18, 0, 655395, 18, 0, 720906, 18, 0, 720907, 18, 0, 720908, 18, 0, 720909, 18, 0, 720910, 18, 0, 720911, 18, 0, 720912, 18, 0, 720913, 18, 0, 720914, 18, 0, 720915, 18, 0, 720916, 18, 0, 720917, 18, 0, 720918, 18, 0, 720919, 18, 0, 720920, 18, 0, 720921, 18, 0, 720922, 18, 0, 720923, 18, 0, 720924, 18, 0, 720925, 18, 0, 720926, 18, 0, 720927, 18, 0, 720928, 18, 0, 720929, 18, 0, 720930, 18, 0, 720931, 18, 0, 786442, 18, 0, 786443, 18, 0, 786444, 18, 0, 786445, 18, 0, 786446, 18, 0, 786447, 18, 0, 786448, 18, 0, 786449, 18, 0, 786450, 18, 0, 786451, 18, 0, 786452, 18, 0, 786453, 18, 0, 786454, 18, 0, 786455, 18, 0, 786456, 18, 0, 786457, 18, 0, 786458, 18, 0, 786459, 18, 0, 786460, 18, 0, 786461, 18, 0, 786462, 18, 0, 786463, 18, 0, 786464, 18, 0, 786465, 18, 0, 786466, 18, 0, 786467, 18, 0, 851978, 18, 0, 851979, 18, 0, 851980, 18, 0, 851981, 18, 0, 851982, 18, 0, 851983, 18, 0, 851984, 18, 0, 851985, 18, 0, 851986, 18, 0, 851987, 18, 0, 851988, 18, 0, 851989, 18, 0, 851990, 18, 0, 851991, 18, 0, 917514, 18, 0, 917515, 18, 0, 917516, 18, 0, 917517, 18, 0, 917518, 18, 0, 917519, 18, 0, 917520, 18, 0, 917521, 18, 0, 917522, 18, 0, 917523, 18, 0, 917524, 18, 0, 917525, 18, 0, 917526, 18, 0, 917527, 18, 0, 983050, 18, 0, 983051, 18, 0, 983052, 18, 0, 983053, 18, 0, 983054, 18, 0, 983055, 18, 0, 983056, 18, 0, 983057, 18, 0, 983058, 18, 0, 983059, 18, 0, 983060, 18, 0, 983061, 18, 0, 983062, 18, 0, 983063, 18, 0, 1048586, 18, 0, 1048587, 18, 0, 1048588, 18, 0, 1048589, 18, 0, 1048590, 18, 0, 1048591, 18, 0, 1048592, 18, 0, 1048593, 18, 0, 1048594, 18, 0, 1048595, 18, 0, 1048596, 18, 0, 1048597, 18, 0, 1048598, 18, 0, 1048599, 18, 0, 1114112, 18, 0, 1114113, 18, 0, 1114114, 18, 0, 1114115, 18, 0, 1114116, 18, 0, 1114117, 18, 0, 1114118, 18, 0, 1114119, 18, 0, 1114120, 18, 0, 1114121, 18, 0, 1114122, 18, 0, 1114123, 18, 0, 1114124, 18, 0, 1114125, 18, 0, 1114126, 18, 0, 1114127, 18, 0, 1114128, 18, 0, 1114129, 18, 0, 1114130, 18, 0, 1114131, 18, 0, 1114132, 18, 0, 1114133, 18, 0, 1114134, 18, 0, 1114135, 18, 0, 1179648, 18, 0, 1179649, 18, 0, 1179650, 18, 0, 1179651, 18, 0, 1179652, 18, 0, 1179653, 18, 0, 1179654, 18, 0, 1179655, 18, 0, 1179656, 18, 0, 1179657, 18, 0, 1179658, 18, 0, 1179659, 18, 0, 1179660, 18, 0, 1179661, 18, 0, 1179662, 18, 0, 1179663, 18, 0, 1179664, 18, 0, 1179665, 18, 0, 1179666, 18, 0, 1179667, 18, 0, 1179668, 18, 0, 1179669, 18, 0, 1179670, 18, 0, 1179671, 18, 0, 1245184, 18, 0, 1245185, 18, 0, 1245186, 18, 0, 1245187, 18, 0, 1245188, 18, 0, 1245189, 18, 0, 1245190, 18, 0, 1245191, 18, 0, 1245192, 18, 0, 1245193, 18, 0, 1245194, 18, 0, 1245195, 18, 0, 1245196, 18, 0, 1245197, 18, 0, 1245198, 18, 0, 1245199, 18, 0, 1245200, 18, 0, 1245201, 18, 0, 1245202, 18, 0, 1245203, 18, 0, 1245204, 18, 0, 1245205, 18, 0, 1245206, 18, 0, 1245207, 18, 0, 1310720, 18, 0, 1310721, 18, 0, 1310722, 18, 0, 1310723, 18, 0, 1310724, 18, 0, 1310725, 18, 0, 1310726, 18, 0, 1310727, 18, 0, 1310728, 18, 0, 1310729, 18, 0, 1310730, 18, 0, 1310731, 18, 0, 1310732, 18, 0, 1310733, 18, 0, 1310734, 18, 0, 1310735, 18, 0, 1310736, 18, 0, 1310737, 18, 0, 1310738, 18, 0, 1310739, 18, 0, 1310740, 18, 0, 1310741, 18, 0, 1310742, 18, 0, 1310743, 18, 0, 1376256, 18, 0, 1376257, 18, 0, 1376258, 18, 0, 1376259, 18, 0, 1376260, 18, 0, 1376261, 18, 0, 1376262, 18, 0, 1376263, 18, 0, 1376264, 18, 0, 1376265, 18, 0, 1376266, 18, 0, 1376267, 18, 0, 1376268, 18, 0, 1376269, 18, 0, 1376270, 18, 0, 1376271, 18, 0, 1376272, 18, 0, 1376273, 18, 0, 1376274, 18, 0, 1376275, 18, 0, 1376276, 18, 0, 1376277, 18, 0, 1376278, 18, 0, 1376279, 18, 0, 1441792, 18, 0, 1441793, 18, 0, 1441794, 18, 0, 1441795, 18, 0, 1441796, 18, 0, 1441797, 18, 0, 1441798, 18, 0, 1441799, 18, 0, 1441800, 18, 0, 1441801, 18, 0, 1441802, 18, 0, 1441803, 18, 0, 1441804, 18, 0, 1441805, 18, 0, 1441806, 18, 0, 1441807, 18, 0, 1441808, 18, 0, 1441809, 18, 0, 1441810, 18, 0, 1441811, 18, 0, 1441812, 18, 0, 1441813, 18, 0, 1441814, 18, 0, 1441815, 18, 0, 1507328, 18, 0, 1507329, 18, 0, 1507330, 18, 0, 1507331, 18, 0, 1507332, 18, 0, 1507333, 18, 0, 1507334, 18, 0, 1507335, 18, 0, 1507336, 18, 0, 1507337, 18, 0, 1507338, 18, 0, 1507339, 18, 0, 1507340, 18, 0, 1507341, 18, 0, 1507342, 18, 0, 1507343, 18, 0, 1507344, 18, 0, 1507345, 18, 0, 1507346, 18, 0, 1507347, 18, 0, 1507348, 18, 0, 1507349, 18, 0, 1507350, 18, 0, 1507351, 18, 0, 1572864, 18, 0, 1572865, 18, 0, 1572866, 18, 0, 1572867, 18, 0, 1572868, 18, 0, 1572869, 18, 0, 1572870, 18, 0, 1572871, 18, 0, 1572872, 18, 0, 1572873, 18, 0, 1572874, 18, 0, 1572875, 18, 0, 1572876, 18, 0, 1572877, 18, 0, 1572878, 18, 0, 1572879, 18, 0, 1572880, 18, 0, 1572881, 18, 0, 1572882, 18, 0, 1572883, 18, 0, 1572884, 18, 0, 1572885, 18, 0, 1572886, 18, 0, 1572887, 18, 0, 1638400, 18, 0, 1638401, 18, 0, 1638402, 18, 0, 1638403, 18, 0, 1638404, 18, 0, 1638405, 18, 0, 1638406, 18, 0, 1638407, 18, 0, 1638408, 18, 0, 1638409, 18, 0, 1638410, 18, 0, 1638411, 18, 0, 1638412, 18, 0, 1638413, 18, 0, 1638414, 18, 0, 1638415, 18, 0, 1638416, 18, 0, 1638417, 18, 0, 1638418, 18, 0, 1638419, 18, 0, 1638420, 18, 0, 1638421, 18, 0, 1638422, 18, 0, 1638423, 18, 0 )

[node name="Floor" type="TileMap" parent="."]
tile_set = ExtResource( 5 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 25, 6, 0, 26, 6, 0, 27, 6, 0, 28, 6, 0, 65539, 6, 0, 65540, 6, 0, 65541, 6, 0, 65542, 6, 0, 65543, 6, 0, 65544, 6, 0, 65545, 6, 0, 65559, 6, 0, 65560, 6, 0, 65561, 6, 0, 65562, 6, 0, 65563, 6, 0, 65564, 6, 0, 65565, 6, 0, 65566, 6, 0, 131075, 6, 0, 131076, 6, 0, 131077, 6, 0, 131078, 6, 0, 131079, 6, 0, 131080, 6, 0, 131081, 6, 0, 131082, 6, 0, 131083, 6, 0, 131084, 6, 0, 131085, 6, 0, 131086, 6, 0, 131087, 6, 0, 131088, 6, 0, 131089, 6, 0, 131090, 6, 0, 131091, 6, 0, 131092, 6, 0, 131093, 6, 0, 131094, 6, 0, 131095, 6, 0, 131096, 6, 0, 131097, 6, 0, 131098, 6, 0, 131099, 6, 0, 131100, 6, 0, 131101, 6, 0, 131102, 6, 0, 196611, 6, 0, 196612, 6, 0, 196613, 6, 0, 196614, 6, 0, 196615, 6, 0, 196616, 6, 0, 196617, 6, 0, 196618, 6, 0, 196619, 6, 0, 196620, 6, 0, 196621, 6, 0, 196622, 6, 0, 196623, 6, 0, 196624, 6, 0, 196625, 6, 0, 196626, 6, 0, 196627, 6, 0, 196628, 6, 0, 196629, 6, 0, 196630, 6, 0, 196631, 6, 0, 196632, 6, 0, 196633, 6, 0, 196634, 6, 0, 196635, 6, 0, 196636, 6, 0, 196637, 6, 0, 196638, 6, 0, 262147, 6, 0, 262148, 6, 0, 262149, 6, 0, 262150, 6, 0, 262151, 6, 0, 262152, 6, 0, 262153, 6, 0, 262154, 6, 0, 262155, 6, 0, 262156, 6, 0, 262157, 6, 0, 262158, 6, 0, 262159, 6, 0, 262160, 6, 0, 262161, 6, 0, 262162, 6, 0, 262163, 6, 0, 262164, 6, 0, 262165, 6, 0, 262166, 6, 0, 262167, 6, 0, 262168, 6, 0, 262169, 6, 0, 262170, 6, 0, 262171, 6, 0, 262172, 6, 0, 262173, 6, 0, 262174, 6, 0, 327683, 6, 0, 327684, 6, 0, 327685, 6, 0, 327686, 6, 0, 327687, 6, 0, 327688, 6, 0, 327689, 6, 0, 327695, 0, 0, 327696, 7, 0, 327697, 7, 0, 327698, 0, 0, 327702, 6, 0, 327703, 6, 0, 327704, 6, 0, 327705, 6, 0, 327706, 6, 0, 327707, 6, 0, 327708, 6, 0, 327709, 6, 0, 327710, 6, 0, 393231, 1, 0, 393232, 7, 0, 393233, 7, 0, 393234, 1, 0, 393238, 6, 0, 393239, 6, 0, 393240, 6, 0, 393241, 6, 0, 393242, 6, 0, 393243, 6, 0, 393244, 6, 0, 393245, 6, 0, 393246, 6, 0, 458768, 7, 0, 458769, 7, 0, 524304, 7, 0, 524305, 7, 0, 589840, 7, 0, 589841, 7, 0, 655375, 0, 0, 655376, 7, 0, 655377, 7, 0, 655378, 0, 0, 720911, 5, 0, 720912, 7, 0, 720913, 7, 0, 720914, 5, 0, 786447, 1, 0, 786448, 7, 0, 786449, 7, 0, 786450, 1, 0, 851984, 7, 0, 851985, 7, 0, 917520, 7, 0, 917521, 7, 0, 983056, 7, 0, 983057, 7, 0, 1048591, 0, 0, 1048592, 7, 0, 1048593, 7, 0, 1048594, 0, 0, 1114127, 1, 0, 1114128, 7, 0, 1114129, 7, 0, 1114130, 1, 0, 1179664, 7, 0, 1179665, 7, 0, 1245189, 6, 0, 1245190, 6, 0, 1245191, 6, 0, 1245192, 6, 0, 1245193, 6, 0, 1245200, 7, 0, 1245201, 7, 0, 1310724, 6, 0, 1310725, 6, 0, 1310726, 6, 0, 1310727, 6, 0, 1310728, 6, 0, 1310729, 6, 0, 1310730, 6, 0, 1310736, 7, 0, 1310737, 7, 0, 1376260, 6, 0, 1376261, 6, 0, 1376262, 6, 0, 1376263, 6, 0, 1376264, 6, 0, 1376265, 6, 0, 1376266, 6, 0, 1376267, 6, 0, 1376268, 6, 0, 1376269, 6, 0, 1376270, 6, 0, 1376271, 6, 0, 1376272, 6, 0, 1376273, 6, 0, 1441796, 6, 0, 1441797, 6, 0, 1441798, 6, 0, 1441799, 6, 0, 1441800, 6, 0, 1441801, 6, 0, 1441802, 6, 0, 1441803, 6, 0, 1441804, 6, 0, 1441805, 6, 0, 1441806, 6, 0, 1441807, 6, 0, 1441808, 6, 0, 1441809, 6, 0, 1507332, 6, 0, 1507333, 6, 0, 1507334, 6, 0, 1507335, 6, 0, 1507336, 6, 0, 1507337, 6, 0, 1507338, 6, 0, 1572869, 6, 0, 1572870, 6, 0, 1572871, 6, 0, 1572872, 6, 0, 1572873, 6, 0 )

[node name="Building" type="TileMap" parent="."]
tile_set = ExtResource( 5 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( -196609, 14, 0, -262144, 2, 0, -262143, 2, 0, -262142, 2, 0, -262141, 2, 0, -262140, 2, 0, -262139, 2, 0, -262138, 2, 0, -262137, 2, 0, -262136, 2, 0, -262135, 2, 0, -262134, 2, 0, -262133, 2, 0, -262132, 2, 0, -262131, 2, 0, -262130, 2, 0, -262129, 2, 0, -262128, 2, 0, -262127, 2, 0, -262126, 2, 0, -262125, 2, 0, -262124, 2, 0, -262123, 2, 0, -262122, 2, 0, -262121, 2, 0, -262120, 2, 0, -262119, 2, 0, -262118, 2, 0, -262117, 2, 0, -262116, 2, 0, -262115, 2, 0, -262114, 2, 0, -262113, 2, 0, -262112, 2, 0, -262111, 2, 0, -262110, 2, 0, -262109, 2, 0, -262108, 15, 0, -131073, 5, 0, -196572, 5, 0, -65537, 5, 0, -131036, 5, 0, -1, 5, 0, -65500, 5, 0, 65535, 5, 0, 2, 14, 0, 3, 2, 0, 4, 2, 0, 5, 2, 0, 6, 2, 0, 7, 2, 0, 8, 2, 0, 9, 2, 0, 10, 15, 0, 22, 14, 0, 23, 2, 0, 24, 3, 0, 29, 4, 0, 30, 2, 0, 31, 15, 0, 36, 5, 0, 131071, 5, 0, 65538, 5, 0, 65546, 1, 0, 65558, 1, 0, 65567, 5, 0, 65572, 5, 0, 196607, 5, 0, 131074, 5, 0, 131103, 5, 0, 131108, 5, 0, 262143, 5, 0, 196610, 5, 0, 196639, 5, 0, 196644, 5, 0, 327679, 5, 0, 262146, 5, 0, 262175, 5, 0, 262180, 5, 0, 393215, 5, 0, 327682, 5, 0, 327690, 0, 0, 327711, 5, 0, 327716, 5, 0, 458751, 5, 0, 393218, 16, 0, 393219, 2, 0, 393220, 2, 0, 393221, 2, 0, 393222, 2, 0, 393223, 2, 0, 393224, 2, 0, 393225, 2, 0, 393226, 17, 0, 393238, 0, 0, 393247, 5, 0, 393252, 5, 0, 524287, 5, 0, 458774, 16, 0, 458775, 2, 0, 458776, 2, 0, 458777, 2, 0, 458778, 2, 0, 458779, 2, 0, 458780, 2, 0, 458781, 2, 0, 458782, 2, 0, 458783, 17, 0, 458788, 5, 0, 589823, 5, 0, 524324, 5, 0, 655359, 5, 0, 589860, 5, 0, 720895, 16, 0, 655360, 2, 0, 655361, 2, 0, 655362, 2, 0, 655363, 2, 0, 655364, 2, 0, 655365, 2, 0, 655366, 2, 0, 655367, 2, 0, 655368, 2, 0, 655369, 15, 0, 655396, 5, 0, 720905, 5, 0, 720932, 5, 0, 786441, 5, 0, 786468, 5, 0, 851977, 5, 0, 851992, 14, 0, 851993, 2, 0, 851994, 2, 0, 851995, 2, 0, 851996, 2, 0, 851997, 2, 0, 851998, 2, 0, 851999, 2, 0, 852000, 2, 0, 852001, 2, 0, 852002, 2, 0, 852003, 2, 0, 852004, 17, 0, 917513, 5, 0, 917528, 5, 0, 983049, 5, 0, 983064, 5, 0, 1114111, 14, 0, 1048576, 2, 0, 1048577, 2, 0, 1048578, 2, 0, 1048579, 2, 0, 1048580, 2, 0, 1048581, 2, 0, 1048582, 2, 0, 1048583, 2, 0, 1048584, 2, 0, 1048585, 17, 0, 1048600, 5, 0, 1179647, 5, 0, 1114136, 5, 0, 1245183, 5, 0, 1179672, 5, 0, 1310719, 5, 0, 1245187, 14, 0, 1245188, 3, 0, 1245194, 4, 0, 1245195, 15, 0, 1245208, 5, 0, 1376255, 5, 0, 1310723, 5, 0, 1310731, 1, 0, 1310744, 5, 0, 1441791, 5, 0, 1376259, 5, 0, 1376280, 5, 0, 1507327, 5, 0, 1441795, 5, 0, 1441816, 5, 0, 1572863, 5, 0, 1507331, 5, 0, 1507339, 0, 0, 1507352, 5, 0, 1638399, 5, 0, 1572867, 16, 0, 1572868, 3, 0, 1572874, 4, 0, 1572875, 17, 0, 1572888, 5, 0, 1703935, 5, 0, 1638424, 5, 0, 1769471, 16, 0, 1703936, 2, 0, 1703937, 2, 0, 1703938, 2, 0, 1703939, 2, 0, 1703940, 2, 0, 1703941, 2, 0, 1703942, 2, 0, 1703943, 2, 0, 1703944, 2, 0, 1703945, 2, 0, 1703946, 2, 0, 1703947, 2, 0, 1703948, 2, 0, 1703949, 2, 0, 1703950, 2, 0, 1703951, 2, 0, 1703952, 2, 0, 1703953, 2, 0, 1703954, 2, 0, 1703955, 2, 0, 1703956, 2, 0, 1703957, 2, 0, 1703958, 2, 0, 1703959, 2, 0, 1703960, 17, 0 )

[node name="scene_manager" parent="." instance=ExtResource( 2 )]
wave_length = 10

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Dialogue_system" parent="CanvasLayer" instance=ExtResource( 4 )]

[node name="Level_intro" parent="CanvasLayer" instance=ExtResource( 1 )]
text = "Level 02 - Ready to rumble"

[node name="Computer" parent="." instance=ExtResource( 12 )]
position = Vector2( 431.407, 60.844 )
frame = 1

[node name="Computer2" parent="." instance=ExtResource( 12 )]
position = Vector2( 119.014, 353.055 )
frame = 1

[node name="Computer3" parent="." instance=ExtResource( 12 )]
position = Vector2( 103.878, 56.2191 )

[node name="spawn_points" type="Node2D" parent="."]

[node name="Spawn_point" parent="spawn_points" instance=ExtResource( 10 )]
position = Vector2( -63.6078, -121.671 )

[node name="Spawn_point2" parent="spawn_points" instance=ExtResource( 10 )]
position = Vector2( 88.8279, -125.919 )

[node name="Spawn_point3" parent="spawn_points" instance=ExtResource( 10 )]
position = Vector2( 250.23, -129.222 )

[node name="Spawn_point4" parent="spawn_points" instance=ExtResource( 10 )]
position = Vector2( 413.993, -132.054 )

[node name="Spawn_point5" parent="spawn_points" instance=ExtResource( 10 )]
position = Vector2( 577.283, -133.942 )

[node name="Spawn_point6" parent="spawn_points" instance=ExtResource( 10 )]
position = Vector2( 686.772, -44.2738 )

[node name="Spawn_point7" parent="spawn_points" instance=ExtResource( 10 )]
position = Vector2( 676.862, 101.555 )

[node name="Spawn_point8" parent="spawn_points" instance=ExtResource( 10 )]
position = Vector2( 682.525, 242.664 )

[node name="Spawn_point9" parent="spawn_points" instance=ExtResource( 10 )]
position = Vector2( 587.194, 304.488 )

[node name="Spawn_point10" parent="spawn_points" instance=ExtResource( 10 )]
position = Vector2( 473.457, 299.768 )

[node name="Spawn_point11" parent="spawn_points" instance=ExtResource( 10 )]
position = Vector2( 481.008, 436.158 )

[node name="Spawn_point12" parent="spawn_points" instance=ExtResource( 10 )]
position = Vector2( 386.62, 504.589 )

[node name="Spawn_point13" parent="spawn_points" instance=ExtResource( 10 )]
position = Vector2( 229.937, 511.668 )

[node name="Spawn_point14" parent="spawn_points" instance=ExtResource( 10 )]
position = Vector2( 73.2541, 513.556 )

[node name="Spawn_point15" parent="spawn_points" instance=ExtResource( 10 )]
position = Vector2( -65.0235, 486.183 )

[node name="Spawn_point16" parent="spawn_points" instance=ExtResource( 10 )]
position = Vector2( -92.8678, 356.873 )

[node name="Spawn_point17" parent="spawn_points" instance=ExtResource( 10 )]
position = Vector2( -64.0796, 225.674 )

[node name="Spawn_point18" parent="spawn_points" instance=ExtResource( 10 )]
position = Vector2( -84.3729, 94.9475 )

[node name="Spawn_point19" parent="spawn_points" instance=ExtResource( 10 )]
position = Vector2( -100.419, -19.2613 )

[node name="pu_spawn_points" type="Node2D" parent="."]

[node name="Powerup_spawn_point" parent="pu_spawn_points" instance=ExtResource( 7 )]
position = Vector2( 272.529, 54.0132 )

[node name="Powerup_spawn_point2" parent="pu_spawn_points" instance=ExtResource( 7 )]
position = Vector2( 271.78, 348.805 )

[node name="Powerup_spawn_point3" parent="pu_spawn_points" instance=ExtResource( 7 )]
position = Vector2( 443.711, 172.005 )

[node name="Powerup_spawn_point4" parent="pu_spawn_points" instance=ExtResource( 7 )]
position = Vector2( 205.854, 142.039 )

[node name="Powerup_spawn_point5" parent="pu_spawn_points" instance=ExtResource( 7 )]
position = Vector2( 266.91, -15.6581 )

[node name="Powerup_spawn_point6" parent="pu_spawn_points" instance=ExtResource( 7 )]
position = Vector2( 347.07, 230.064 )

[node name="Powerup_spawn_point7" parent="pu_spawn_points" instance=ExtResource( 7 )]
position = Vector2( 346.321, 347.307 )

[node name="Powerup_spawn_point8" parent="pu_spawn_points" instance=ExtResource( 7 )]
position = Vector2( 200.236, 262.278 )

[node name="Powerup_spawn_point9" parent="pu_spawn_points" instance=ExtResource( 7 )]
position = Vector2( 81.8694, 137.544 )

[node name="Powerup_spawn_point10" parent="pu_spawn_points" instance=ExtResource( 7 )]
position = Vector2( 547.468, 61.8792 )

[node name="Player" parent="." instance=ExtResource( 11 )]
position = Vector2( 265.731, 196.992 )

[connection signal="finished_dialogue" from="CanvasLayer/Dialogue_system" to="." method="_on_Dialogue_system_finished_dialogue"]
[connection signal="end_level_intro" from="CanvasLayer/Level_intro" to="." method="_on_Level_intro_end_level_intro"]
